# Work-mate

./: README.md  pyproject.toml
data/: products.csv
